--- a/Workshop/_Imports.razor
+++ b/Workshop/_Imports.razor
@@ -12,3 +12,5 @@
 @using Workshop.Entities
 @using Workshop.Models
 @using Workshop.DataAccess
+@using Workshop.Interfaces
+@using Workshop.Services
