--- a/Workshop/Pages/Index.razor
+++ b/Workshop/Pages/Index.razor
@@ -3,6 +3,6 @@
 <h1>System Obsługi Napraw</h1>
 
 Witam wszystkich serdecznie. W drugiej zakładce test działania bazy Azure.
-PROSTE.
+PROSTE. Dzień dobry
 
 <img src="/images/jc.png" alt="Cieślak">
