--- a/Workshop/Shared/NavMenu.razor
+++ b/Workshop/Shared/NavMenu.razor
@@ -16,7 +16,12 @@
             <NavLink class="nav-link" href="articlelist">
                 <span class="oi oi-plus" aria-hidden="true"></span> Baza
             </NavLink>
-        </li>       
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="addClient">
+                <span class="oi oi-plus" aria-hidden="true"></span> Dodaj Klienta
+            </NavLink>
+        </li>
     </ul>
 </div>
 
