feat: rename interface

--- a/Workshop/Pages/AddClient.razor
+++ b/Workshop/Pages/AddClient.razor
@@ -38,8 +38,5 @@
         navigationManager.NavigateTo("/articlelist");
     }
 
-    void cancel()
-    {
-        navigationManager.NavigateTo("/articlelist");
-    }
+    void cancel() => navigationManager.NavigateTo("/articlelist");
 }
