--- a/Workshop/Shared/NavMenu.razor
+++ b/Workshop/Shared/NavMenu.razor
@@ -22,6 +22,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Dodaj Klienta
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="login">
+                <span class="oi oi-plus" aria-hidden="true"></span> Login
+            </NavLink>
+        </li>
     </ul>
 </div>
 
