--- a/Workshop/Pages/Login.razor
+++ b/Workshop/Pages/Login.razor
@@ -20,17 +20,17 @@
                 <div>
                     <br />
                 </div>
-                <div class="col-12 row">
+                <div class="col-12 row login-input">
                     <input type="text" class="form-control col-12" placeholder="Username" />
                 </div>
                 <br />
-                <div class="col-12 row">
+                <div class="col-12 row login-input">
                     <input type="password" class="form-control col-12" placeholder="Password" />
                 </div>
                 <br />
-                <div class="col-12 row">
+                <div class="col-12 row login-input">
                     <span class="col-12"></span>
-                    <input type="submit" class="form-control col-6 btn btn-primary" value="Login" />
+                    <input type="submit" class="form-control col-6 btn btn-primary" value="SIGN IN" />
                     <!--<a href="" class="col-3">Sign up</a>-->
                 </div>
                 <br />
