--- a/Workshop/Pages/Login.razor
+++ b/Workshop/Pages/Login.razor
@@ -1,6 +1,12 @@
 ﻿@page "/login"
 @layout LoginLayout
 
+@using Workshop.Entities
+@using Workshop.Services
+@using System.Security.Claims
+@inject AuthenticationStateProvider AuthenticationStateProvider
+@inject NavigationManager NavigationManager
+
 <center>
     <div class="col-8 card">
         <div class="col-12 row">
@@ -11,32 +17,33 @@
                 <img src="/images/logo.png" width="100%" height="90%" alt="LOGO" />
             </div>
             <div class="col-6" style="border-left:thick">
-                <div>
-                    <br /><br /><br />
-                </div>
-                <div>
-                    <h3 style="font-weight:bold; color:grey">Warsztat - System Obsługi Napraw</h3>
-                </div>
-                <div>
+                <EditForm Model="@employee" OnValidSubmit="@SignIn">
+                    <div>
+                        <br /><br /><br />
+                    </div>
+                    <div>
+                        <h3 style="font-weight:bold; color:grey">Warsztat - System Obsługi Napraw</h3>
+                    </div>
+                    <div>
+                        <br />
+                    </div>
+                    <div class="col-12 row login-input">
+                        <input type="text" class="form-control col-12" @bind="employee.Username" placeholder="Username" />
+                    </div>
                     <br />
-                </div>
-                <div class="col-12 row login-input">
-                    <input type="text" class="form-control col-12" placeholder="Username" />
-                </div>
-                <br />
-                <div class="col-12 row login-input">
-                    <input type="password" class="form-control col-12" placeholder="Password" />
-                </div>
-                <br />
-                <div class="col-12 row login-input">
-                    <span class="col-12"></span>
-                    <input type="submit" class="form-control col-6 btn btn-primary" value="SIGN IN" />
-                    <!--<a href="" class="col-3">Sign up</a>-->
-                </div>
-                <br />
-                <div class="col-12 row" style="text-align:left; font-weight:bold">
-                    <span class="col-12">Bufor na Info</span>
-                </div>
+                    <div class="col-12 row login-input">
+                        <input type="password" class="form-control col-12" @bind="employee.Password" placeholder="Password" />
+                    </div>
+                    <br />
+                    <div class="col-12 row login-input">
+                        <span class="col-12"></span>
+                        <input type="submit" class="form-control col-6 btn btn-primary" value="SIGN IN" />
+                    </div>
+                    <br />
+                    <div class="col-12 row" style="text-align:left; font-weight:bold">
+                        <span class="col-12">@LoginMessage</span>
+                    </div>
+                </EditForm>
             </div>
         </div>
         <div class="col-12 row">
@@ -46,5 +53,22 @@
 </center>
 
 
+@code {
+    private Employee employee;
+    public string LoginMessage { get; set; }
+    public string ErrorMessage { get; set; }
+    ClaimsPrincipal claimsPrincipal;
 
+    protected override void OnInitialized()
+    {
+        employee = new Employee();
+    }
+
+    private void SignIn()
+    {
+        LoginMessage = "Ooo mamy cynk, że kliknąłeś w SIGN IN" + "\n Username: " + employee.Username + "\n Password: " + employee.Password;
+
+        employee.Password = "";
+    }
+}
 
