--- a/Workshop/Pages/Login.razor
+++ b/Workshop/Pages/Login.razor
@@ -4,8 +4,10 @@
 @using Workshop.Entities
 @using Workshop.Services
 @using System.Security.Claims
+@using Microsoft.Extensions.Logging
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject NavigationManager NavigationManager
+@inject ILogger<Login> Logger
 
 <center>
     <div class="col-8 card">
@@ -18,6 +20,9 @@
             </div>
             <div class="col-6" style="border-left:thick">
                 <EditForm Model="@employee" OnValidSubmit="@SignIn">
+                    <DataAnnotationsValidator />
+                    <ValidationSummary />
+
                     <div>
                         <br /><br /><br />
                     </div>
@@ -66,9 +71,12 @@
 
     private void SignIn()
     {
+        Logger.LogInformation("SIGN IN called");
+
         LoginMessage = "Ooo mamy cynk, że kliknąłeś w SIGN IN" + "\n Username: " + employee.Username + "\n Password: " + employee.Password;
 
         employee.Password = "";
     }
+
 }
 
