--- a/Workshop/Shared/MainLayout.razor
+++ b/Workshop/Shared/MainLayout.razor
@@ -5,7 +5,11 @@
 </div>
 
 <div class="main">
+
     <div class="top-row px-4">
+        <NavLink class="nav-link" href="login">
+            <span class="oi oi-plus" aria-hidden="true"></span> Login
+        </NavLink>
         <a href="https://docs.microsoft.com/en-us/aspnet/" target="_blank">About</a>
     </div>
 
