--- a/Workshop/Shared/NavMenu.razor
+++ b/Workshop/Shared/NavMenu.razor
@@ -9,8 +9,7 @@
     <ul class="nav flex-column">
         <!--<AuthorizeView Roles="admin, superuser" Policy="content-editor">-->
         <AuthorizeView>
-            <!--<Authorized>-->
-            <NotAuthorized>
+            <Authorized>
                 <li class="nav-item px-3">
                     <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                         <span class="oi oi-home" aria-hidden="true"></span> Strona Główna
@@ -26,6 +25,8 @@
                         <span class="oi oi-plus" aria-hidden="true"></span> Dodaj Klienta
                     </NavLink>
                 </li>
+            </Authorized>
+            <NotAuthorized>
                 <li class="nav-item px-3">
                     <NavLink class="nav-link" href="login">
                         <span class="oi oi-plus" aria-hidden="true"></span> Login
