--- a/Workshop/App.razor
+++ b/Workshop/App.razor
@@ -1,12 +1,13 @@
-﻿<CascadingAuthenticationState>
+﻿
     <Router AppAssembly="@typeof(Program).Assembly">
         <Found Context="routeData">
-            <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         </Found>
         <NotFound>
-            <LayoutView Layout="@typeof(MainLayout)">
-                <p>wystąpił fakap.</p>
-            </LayoutView>
+            <CascadingAuthenticationState>
+                <LayoutView Layout="@typeof(MainLayout)">
+                    <p>wystąpił fakap.</p>
+                </LayoutView>
+            </CascadingAuthenticationState>
         </NotFound>
     </Router>
-</CascadingAuthenticationState>
