--- a/Workshop/Pages/Login.razor
+++ b/Workshop/Pages/Login.razor
@@ -64,25 +64,26 @@
     public string LoginMessage { get; set; }
     public string ErrorMessage { get; set; }
 
-    protected override void OnInitialized()
+    protected override Task OnInitializedAsync()
     {
         employee = new UserLoginDto();
+        return base.OnInitializedAsync();
     }
 
     private async Task<bool> SignIn()
     {
-        if(await authorizationService.LoginUser(employee))
+        var user = await authorizationService.LoginUser(employee);
+        if(user != null)
         {
-            ((CustomAuthenticationStateProvider)AuthenticationStateProvider).MarkUserAsAuthenticated(employee);
+            ((CustomAuthenticationStateProvider)AuthenticationStateProvider).MarkUserAsAuthenticated(user);
             NavigationManager.NavigateTo("/");
-            return true;
         }
         else
         {
             ErrorMessage = "Nie odnaleziono użytkownika z pasującymi danymi";
         }
         Logger.LogInformation("SIGN IN called");
-        return false;
+        return await Task.FromResult(true);
 
     }
 
