--- a/Workshop/Pages/AddEmployee.razor
+++ b/Workshop/Pages/AddEmployee.razor
@@ -9,7 +9,9 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form>
+        <EditForm Model="@employee" OnValidSubmit="@CreateEmployee">
+            <DataAnnotationsValidator/>
+            <ValidationSummary/>
             <div class="form-group">
                 <label for="Name" class="control-label">Imię</label>
                 <input for="Name" class="form-control" @bind-value="@employee.FirstName" />
@@ -36,10 +38,10 @@
                 </select>
             </div>
             <div class="form-group">
-                <button type="button" class="btn btn-primary" @onclick="() => CreateEmployee()">Zapisz</button>
+                <input type="submit" class="btn btn-primary" value="Zapisz" />
                 <button type="button" class="btn btn-danger" @onclick="() => Cancel()">Anuluj</button>
             </div>
-        </form>
+        </EditForm>
     </div>
 </div>
 
