--- a/Workshop/Shared/NavMenu.razor
+++ b/Workshop/Shared/NavMenu.razor
@@ -44,6 +44,11 @@
                 </li>
             </Authorized>
         </AuthorizeView>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="realizeActivity" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Realizuj czynność
+            </NavLink>
+        </li>
     </ul>
 </div>
 
