--- a/Workshop/Pages/FetchArticle.razor
+++ b/Workshop/Pages/FetchArticle.razor
@@ -1,4 +1,4 @@
-﻿@page "/articlelist"
+﻿@*@page "/articlelist"
 @inject IArticleManager articleManager
 
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -255,4 +255,4 @@ else
         this.OnInitializedAsync().Wait();
     }
 
-}
+}*@
