Request list component

--- a/Workshop/Pages/RealizeActivity.razor
+++ b/Workshop/Pages/RealizeActivity.razor
@@ -1,4 +1,5 @@
 ﻿@page "/realizeActivity"
+
 @using System.Threading.Tasks
 @using System.Text.Json;
 @using System.Text.Json.Serialization;
@@ -6,7 +7,7 @@
 @inject Microsoft.AspNetCore.Components.NavigationManager navigationManager
 
 <head>
-    <h3>Realize Acivity</h3>
+    Realize Acivity
 </head>
 <body>
     <table id="activityTable" class="table table-striped table-bordered">
