--- a/Workshop/Shared/NavMenu.razor
+++ b/Workshop/Shared/NavMenu.razor
@@ -45,7 +45,7 @@
             </Authorized>
         </AuthorizeView>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="realizeActivity" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="requestList" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Realizuj czynność
             </NavLink>
         </li>
