--- a/Workshop/Pages/AddClient.razor
+++ b/Workshop/Pages/AddClient.razor
@@ -40,5 +40,5 @@
         navigationManager.NavigateTo("/articlelist");
     }
 
-    void cancel() => navigationManager.NavigateTo("/articlelist");
+    void cancel() => navigationManager.NavigateTo("/clients");
 }
