--- a/Workshop/Shared/NavMenu.razor
+++ b/Workshop/Shared/NavMenu.razor
@@ -30,6 +30,11 @@
                 </NavLink>
             </li>
             <li class="nav-item px-3">
+                <NavLink class="nav-link" href="clients">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Klienci
+                </NavLink>
+            </li>
+            <li class="nav-item px-3">
                 <NavLink class="nav-link" href="addClient">
                     <span class="oi oi-plus" aria-hidden="true"></span> Dodaj Klienta
                 </NavLink>
