Cars Page v1 (Only Page)

--- a/Workshop/Pages/Clients.razor
+++ b/Workshop/Pages/Clients.razor
@@ -31,11 +31,11 @@
                     <td>@client.LastName</td>
                     <td>@client.PhoneNumber</td>
                     <td>
-                        <button type="button" class="btn btn-warning">Edytuj</button>
+                        <button type="button" class="btn btn-warning" @onclick="() => EditClient()">Edytuj</button>
                         <button type="button" class="btn btn-danger" @onclick="() => DeleteClient(client)">Usuń</button>
                     </td>
                     <td>
-                        <button type="button" class="btn btn-primary">Przypisz samochód</button>
+                        <button type="button" class="btn btn-primary" @onclick="() => AddCar()">Przypisz samochód</button>
                     </td>
                 </tr>
             }
@@ -53,9 +53,19 @@
 
     void AddNewClient() => navigationManager.NavigateTo("/addClient");
 
+    void EditClient()
+    {
+
+    }
+
     public async Task DeleteClient(Client client)
     {
         await clientService.DeleteClient(client);
         navigationManager.NavigateTo("/clients", forceLoad: true);
+    }
+
+    void AddCar()
+    {
+        navigationManager.NavigateTo("/cars");
     }
 }
