--- a/Workshop/Shared/NavMenu.razor
+++ b/Workshop/Shared/NavMenu.razor
@@ -35,6 +35,11 @@
                 </NavLink>
             </li>
             <li class="nav-item px-3">
+                <NavLink class="nav-link" href="cars">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Samochody
+                </NavLink>
+            </li>
+            <li class="nav-item px-3">
                 <NavLink class="nav-link" href="addClient">
                     <span class="oi oi-plus" aria-hidden="true"></span> Dodaj Klienta
                 </NavLink>
