--- a/Workshop/Pages/Cars.razor
+++ b/Workshop/Pages/Cars.razor
@@ -14,7 +14,7 @@
             <th>Klient</th>
             <th>Akcje</th>
             <th>
-                <button type="button" class="btn btn-primary" @onclick="() => AddNewCar()">Dodaj samochód</button>
+                <button type="button" class="btn btn-primary" @onclick="() => AddCar()">Dodaj samochód</button>
             </th>
         </tr>
     </thead>
@@ -64,5 +64,10 @@
     void AddCar()
     {
         navigationManager.NavigateTo("/");
+    }
+
+    void EditCar()
+    {
+
     }
 }
