--- a/Workshop/Pages/AddCar.razor
+++ b/Workshop/Pages/AddCar.razor
@@ -12,22 +12,22 @@
         <form>
             <div class="form-group">
                 <label for="Name" class="control-label">Marka</label>
-                <input for="Name" class="form-control" />
+                <input for="Name" class="form-control" @bind-value="@car.Brand" />
             </div>
             <div class="form-group">
                 <label for="Name" class="control-label">Model</label>
-                <input for="Name" class="form-control" />
+                <input for="Name" class="form-control" @bind-value="@car.Model" />
             </div>
             <div class="form-group">
                 <label for="Name" class="control-label">Rok produkcji</label>
-                <input for="Name" class="form-control" />
+                <input for="Name" class="form-control" @bind-value="@car.ProductionYear" />
             </div>
             <div class="form-group">
                 <label for="Name" class="control-label">Numer rejestracyjny</label>
-                <input for="Name" class="form-control" />
+                <input for="Name" class="form-control" @bind-value="@car.RegistrationNumber" />
             </div>
             <div class="form-group">
-                <label for="Role" class="control-label">Rola</label>
+                <label for="Role" class="control-label">Typ</label>
                 <select for="Role" class="form-control">
 
                 </select>
@@ -41,9 +41,11 @@
 </div>
 
 @code {
+    private Car car = new Car();
 
     protected void CreateCar()
     {
+        carService.AddCar();
         navigationManager.NavigateTo("/clients");
     }
 
