--- a/Workshop/Pages/AddCar.razor
+++ b/Workshop/Pages/AddCar.razor
@@ -1,5 +1,6 @@
 ﻿@page "/addCar"
 @inject ICarService carService
+@inject ICarTypeService carTypeService
 @inject Microsoft.AspNetCore.Components.NavigationManager navigationManager
 @attribute [AuthorizeRoles(Role.Manager)]
 
@@ -29,7 +30,10 @@
             <div class="form-group">
                 <label for="Role" class="control-label">Typ</label>
                 <select for="Role" class="form-control">
-
+                    @foreach (CarType cartype in cartypes)
+                    {
+                        <option value="@cartype">@cartype.TypeName</option>
+                    }
                 </select>
             </div>
             <div class="form-group">
@@ -42,6 +46,12 @@
 
 @code {
     private Car car = new Car();
+    private IEnumerable<CarType> cartypes = new List<CarType>();
+
+    protected override async Task OnInitializedAsync()
+    {
+        cartypes = await carTypeService.GetAllTypes();
+    }
 
     protected async Task CreateCar()
     {
