--- a/Workshop/Pages/Cars.razor
+++ b/Workshop/Pages/Cars.razor
@@ -13,15 +13,12 @@
             <th>Model</th>
             <th>Klient</th>
             <th>Akcje</th>
-            @*<th>
-                <button type="button" class="btn btn-primary" @onclick="() => AddNewCar()">Dodaj samochód</button>
-            </th>*@
         </tr>
     </thead>
     <tbody>
         @if (cars == null)
         {
-            <p><em>Ładuję...</em></p>
+            <div class="spinner"></div>
         }
         else
         {
