some fixes and cleaning

--- a/Workshop/App.razor
+++ b/Workshop/App.razor
@@ -6,7 +6,7 @@
         <NotFound>
             <CascadingAuthenticationState>
                 <LayoutView Layout="@typeof(MainLayout)">
-                    <p>wystąpił fakap.</p>
+                    <p>Wystąpił błąd systemu.</p>
                 </LayoutView>
             </CascadingAuthenticationState>
         </NotFound>
