--- a/Workshop/Pages/Cars.razor
+++ b/Workshop/Pages/Cars.razor
@@ -21,7 +21,7 @@
     <tbody>
         @if (cars == null)
         {
-            <p><em>Ładuję...</em></p>
+            <div class="spinner"></div>
         }
         else
         {
