--- a/Workshop/Pages/Clients.razor
+++ b/Workshop/Pages/Clients.razor
@@ -20,7 +20,7 @@
     <tbody>
         @if (clients == null)
         {
-            <p><em>Ładuję...</em></p>
+            <div class="spinner"></div>
         }
         else
         {
