--- a/Workshop/Shared/NavMenu.razor
+++ b/Workshop/Shared/NavMenu.razor
@@ -25,11 +25,6 @@
         </AuthorizeView>
         <AuthorizeView Roles="@($"{Role.Manager}")">
             <li class="nav-item px-3">
-                <NavLink class="nav-link" href="articlelist">
-                    <span class="oi oi-plus" aria-hidden="true"></span> Baza
-                </NavLink>
-            </li>
-            <li class="nav-item px-3">
                 <NavLink class="nav-link" href="clients">
                     <span class="oi oi-plus" aria-hidden="true"></span> Klienci
                 </NavLink>
@@ -49,11 +44,13 @@
                 </li>
             </Authorized>
         </AuthorizeView>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="requestList" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Realizuj czynność
-            </NavLink>
-        </li>
+        <AuthorizeView Roles="@($"{Role.Worker}")">
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="requestList" Match="NavLinkMatch.All">
+                    <span class="oi oi-home" aria-hidden="true"></span> Realizuj czynność
+                </NavLink>
+            </li>
+        </AuthorizeView>
     </ul>
 </div>
 
