--- a/Workshop/Pages/EditCar.razor
+++ b/Workshop/Pages/EditCar.razor
@@ -1,4 +1,4 @@
-@page "/addCar/{ClientId:guid}"
+﻿@page "/editCar/{CarId:guid}"
 @inject ICarService carService
 @inject ICarTypeService carTypeService
 @inject CarContext carContext
@@ -6,12 +6,8 @@
 @attribute [AuthorizeRoles(Role.Manager)]
 
 <h1>
-    Dodaj/Powiąż Samochód
+    Edytuj Samochód
 </h1>
-
-<h2>
-    Klient: @car.Client.FirstName @car.Client.LastName
-</h2>
 
 <div class="row">
     <div class="col-md-4">
@@ -34,7 +30,16 @@
             </div>
             <div class="form-group">
                 <label for="Role" class="control-label">Typ</label>
-                <select for="Role" class="form-control"  @bind="@carType">
+                <select for="Role" class="form-control" @bind="@car.Client">
+                    @foreach (Client client in clients)
+                    {
+                        <option value="@client.Id">@client.FirstName @client.LastName</option>
+                    }
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="Role" class="control-label">Typ</label>
+                <select for="Role" class="form-control" @bind="@carType">
                     @foreach (CarType cartype in cartypes)
                     {
                         <option value="@cartype.TypeName">@cartype.TypeName</option>
@@ -42,7 +47,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <button type="button" class="btn btn-primary" @onclick="() => CreateCar(car)">Zapisz</button>
+                <button type="button" class="btn btn-primary" @onclick="() => DoEditCar(car)">Zapisz</button>
                 <button type="button" class="btn btn-danger" @onclick="() => Cancel()">Anuluj</button>
             </div>
         </form>
@@ -52,23 +57,22 @@
 @code {
 
     [Parameter]
-    public Guid ClientId { get; set; }
+    public Guid CarId { get; set; }
     private Car car = new Car();
     private string carType;
     private IEnumerable<CarType> cartypes = new List<CarType>();
+    private IEnumerable<Client> clients = new List<Client>();
 
     protected override async Task OnInitializedAsync()
     {
         cartypes = await carTypeService.GetAllTypes();
         carType = cartypes.First().TypeName;
+        clients = carContext.Clients;
     }
 
     protected override void OnParametersSet()
     {
-        car = new Car
-        {
-            Client = carContext.Clients.Find(ClientId)
-        };
+        car = carContext.Cars.Find(CarId);
     }
 
     private CarType carTypeMapper(string typeName)
@@ -76,10 +80,10 @@
         return cartypes.Where(c => c.TypeName.Equals(typeName)).FirstOrDefault();
     }
 
-    protected async Task CreateCar(Car car)
+    protected async Task DoEditCar(Car car)
     {
         car.CarType = carTypeMapper(carType);
-        await carService.AddCar(car);
+        await carService.EditCar(car);
         navigationManager.NavigateTo("/clients");
     }
 
