--- a/Workshop/Pages/EditCar.razor
+++ b/Workshop/Pages/EditCar.razor
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label for="Role" class="control-label">Typ</label>
-                <select for="Role" class="form-control" @bind="@car.Client">
+                <select for="Role" class="form-control" @bind="@carClientId">
                     @foreach (Client client in clients)
                     {
                         <option value="@client.Id">@client.FirstName @client.LastName</option>
@@ -60,6 +60,7 @@
     public Guid CarId { get; set; }
     private Car car = new Car();
     private string carType;
+    private System.Guid carClientId;
     private IEnumerable<CarType> cartypes = new List<CarType>();
     private IEnumerable<Client> clients = new List<Client>();
 
@@ -73,6 +74,7 @@
     protected override void OnParametersSet()
     {
         car = carContext.Cars.Find(CarId);
+        carClientId = car.Client.Id;
     }
 
     private CarType carTypeMapper(string typeName)
@@ -80,9 +82,15 @@
         return cartypes.Where(c => c.TypeName.Equals(typeName)).FirstOrDefault();
     }
 
+    private Client carClientMapper(System.Guid clientId)
+    {
+        return clients.Where(c => c.Id.Equals(clientId)).FirstOrDefault();
+    }
+
     protected async Task DoEditCar(Car car)
     {
         car.CarType = carTypeMapper(carType);
+        car.Client = carClientMapper(carClientId);
         await carService.EditCar(car);
         navigationManager.NavigateTo("/clients");
     }
